# zk-regex

./: .eslintrc.json  .gitignore  .latest_aztec_cli_vars  .prettierrc  Cargo.toml  README.md  babel.config.js  config.toml  package-lock.json  package.json  tsconfig.json
.cargo/: config
.github/workflows/: publish.yaml  test.yaml
circom/: README.md  package.json
circom/circuits/: regex_helpers.circom
circom/circuits/common/: body_hash_regex.circom  email_addr_regex.circom  email_domain_graph.json  email_domain_regex.circom  from_all_graph.json  from_all_regex.circom  message_id_graph.json  message_id_regex.circom  timestamp.json  (+14 more)
circom/regexes/: body_hash.json  email_addr.json  email_domain.json  from_all.json  message_id.json  reversed_bracket.json  simple.json  subject_all.json
circom/scripts/: gen_regex.py
compiler/: Cargo.toml  README.md  cli.js  gen.js  lexical.js  nfa.json  package.json  regex_to_dfa.js  tpl.circom
compiler/examples/: timestamp.json
compiler/output/: Rando.circom  Regex.circom  TimestampRegex.circom
compiler/output/noir/: Nargo.toml  gates.sh
compiler/output/noir/src/: main.nr
compiler/src/: driver.rs  error.rs  lib.rs  types.rs  utils.rs  wasm.rs
compiler/src/backend/: circom.rs  mod.rs  noir.rs  shared.rs
compiler/src/ir/: graph.rs  intermediate.rs  mod.rs  nfa.rs
compiler/src/nfa/: builder.rs  cache.rs  debug.rs  epsilon.rs  error.rs  graph.rs  mod.rs  wasm.rs
compiler/src/nfa/codegen/: circom.rs  mod.rs  noir.rs
compiler/src/passes/: builder.rs  canonicalize.rs  epsilon.rs  error.rs  mod.rs  optimize.rs
noir/: Nargo.toml  README.md
noir/common/: body_hash.json  succinct.json
noir/scripts/: gen_inputs.py  gen_inputs.sh  gen_regex.py  gen_regex.sh
noir/src/: lib.nr
noir/subject_all/: Nargo.toml  Prover.toml
noir/timestamp/: Prover.toml
noir_js/: package.json
noir_js/example/: Nargo.toml
noir_js/tests/: regex_email.test.js
test/: header.fixture.txt  regex-compiler.test.js  regex-compiler.test.ts
test/circuits/: regex_compiler.circom  test_regex_compiler.circom  test_regex_compiler_group_0.circom  test_regex_compiler_group_1.circom  test_regex_compiler_group_2.circom  test_regex_compiler_group_3.circom
x/: Nargo.toml  gen.sh  gen_simple.sh  info.sh  profile.sh  prove.sh  transitions.json  x.json  z.json
x/simple/: Nargo.toml  Prover.toml
x/sparse/: Nargo.toml  Prover.toml
x/src/: main.nr  regex.nr  regex_old.nr
(+168 files in other folders)
