[workspace]
members = ["compiler"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
clap = "4.5.34"
comptime = { git = "https://github.com/jp4g/sparse_array", branch = "feat/comptime-codegen" }
heck = "0.5.0"
regex-automata = "0.4.9"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

resolver = "2"