[package]
name = "compiler"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
heck = "0.5.0"
regex-automata = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }