[package]
name = "compiler"
version = "2.0.0-alpha.1"
edition = { workspace = true }

[[bin]]
name = "zk-regex"
path = "src/bin/zk-regex.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
heck = "0.5.0"
regex-automata = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
comptime = { git = "https://github.com/jp4g/sparse_array", branch = "feat/comptime-codegen" }
thiserror = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
